--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-.head{
-       text-align: center;
-}
-.head1{
-       text-align: center;
+.intro{
+       font-family: 'Times New Roman', Times, serif;
 }
