--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 body {
-    background-image: url("/home/shannon/Pictures/elegant 1.jpg");
+    background-image: url("file:///home/shannon/Downloads/andrea-de-santis-vwnkvet865k-unsplash.jpg");
     background-color: #cccccc;
    }
-   
